Old Java doesn't support Stream.toList(), using Stream.collect(Collectors.toList()) instead